# hcr

./: .gitignore  .gitmodules  README.md
map_manager/: CMakeLists.txt  package.xml
map_manager/cfg/: dynamic_map_param.yaml
map_manager/include/map_manager/: dynamicMap.cpp  dynamicMap.h
map_manager/include/map_manager/detector/: boxDetector.h
map_manager/launch/: rviz.launch
p3at_gazebo/: CMakeLists.txt  package.xml
p3at_gazebo/launch/: bringup_all_sim.launch  bringup_sim.launch  gazebo.launch  move_target_box.launch  spawn_p3at.launch
p3at_gazebo/rviz/: p3at_hcr.rviz
p3at_gazebo/urdf/: p3at.urdf.xacro
p3at_gazebo/worlds/: hcr_demo.world
p3at_navigation/: package.xml
p3at_navigation/config/: costmap_common.yaml  dwa_local_planner.yaml  global_costmap.yaml  local_costmap.yaml
p3at_navigation/launch/: move_base.launch
ros_ws/src/: CMakeLists.txt
ros_ws/src/hcr_msgs/: CMakeLists.txt  package.xml
ros_ws/src/hcr_msgs/msg/: TargetCandidate.msg
ros_ws/src/map_manager/: package.xml
ros_ws/src/map_manager/cfg/: dynamic_map_param.yaml
ros_ws/src/map_manager/launch/: dynamic_map.launch
ros_ws/src/map_manager/src/: dynamic_map_node.cpp
ros_ws/src/p3at_nav/: CMakeLists.txt  package.xml
ros_ws/src/p3at_nav/config/: gmapping_params.yaml
ros_ws/src/p3at_nav/hcr_msgs/msg/: TargetCandidateArray.msg
ros_ws/src/p3at_nav/launch/: depth_to_scan.launch  depth_to_scan_fixed.launch  full_stack.launch  gmapping_slam.launch  sim_with_scan.launch  tf_to_pose.launch
ros_ws/src/p3at_nav/maps/: my_first_map.pgm  my_first_map.yaml
ros_ws/src/p3at_nav/p3at_navigation/config/: global_costmap_slam.yaml
ros_ws/src/p3at_nav/p3at_navigation/launch/: move_base_gmapping.launch
ros_ws/src/p3at_nav/rviz/: depth_scan.rviz  hcr_integration.rviz  slam.rviz
ros_ws/src/p3at_nav/scripts/: camera_info_from_image_stamp.py  depth_camera_info_from_image.py  relay_depth_camera_info.py  save_map.sh  tf_to_pose.py
ros_ws/src/p3at_nav/target_follower/: package.xml
ros_ws/src/p3at_nav/target_follower/launch/: target_candidate_selector.launch  target_pos_mux.launch
ros_ws/src/p3at_navigation/: CMakeLists.txt
ros_ws/src/p3at_navigation/config/: costmap_common_slam.yaml  local_costmap_slam.yaml
ros_ws/src/p3at_navigation/launch/: bringup_nav.launch  move_base.launch  move_base_gmapping.launch
ros_ws/src/p3at_sim/: CMakeLists.txt  package.xml
ros_ws/src/p3at_sim/launch/: bringup.launch  bringup_depth.launch  move_target_box.launch
ros_ws/src/p3at_sim/scripts/: move_target_box.py
ros_ws/src/p3at_sim/urdf/: p3at_with_depth_camera.urdf.xacro
ros_ws/src/target_follower/: CMakeLists.txt  package.xml
ros_ws/src/target_follower/launch/: mock_yolo_from_gazebo.launch
ros_ws/src/target_follower/scripts/: follow_target.py  mock_yolo_from_gazebo.py  target_candidate_selector.py
target_follower/: CMakeLists.txt  package.xml
target_follower/launch/: follow_target.launch
target_follower/scripts/: follow_target.py  target_pos_mux.py
tools/: camera_info_pub.py  inspect_depth_once.py  relay_camera_info.py  source_ros.sh  source_ros.zsh
