<?xml version="1.0"?>
<package format="2">
  <name>p3at_navigation</name>
  <version>0.1.0</version>
  <description>Move_base configuration for a Pioneer 3-AT style ground robot using dynamic_map pointcloud as obstacles.</description>

  <maintainer email="ss4822@ic.ac.uk">sax</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>move_base</depend>
  <depend>costmap_2d</depend>
  <depend>base_local_planner</depend>
  <depend>navfn</depend>

  <export></export>
</package>
