<?xml version="1.0"?>
<package format="2">
  <name>target_follower</name>
  <version>0.1.0</version>
  <description>Follow a moving target by sending repeated goals to move_base (ROS1 Noetic).</description>

  <maintainer email="ss4822@ic.ac.uk">sax</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>

  <export></export>
</package>
