<?xml version="1.0"?>
<package format="2">
  <name>hcr_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages for the Human-Centered Robotics project (target candidates, etc.).</description>

  <maintainer email="ss4822@ic.ac.uk">sax</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export></export>
</package>
