<?xml version="1.0"?>
<package format="2">
  <name>map_manager</name>
  <version>0.0.0</version>
  <description>The map_manager package</description>

  <maintainer email="zhefan@todo.todo">zhefan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Messages/services -->
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>

  <!-- Core ROS -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Mapping + perception -->
  <depend>octomap_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>

  <!-- TF -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- PCL -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export/>
</package>
